	Increased the size of the default font in SimpleEdgePortrayal3D: from 24 to 60.
		-this change was motivated by the labels in Balls3DWithUI being way to small
		-this change was tested on mac-os and windows (/w java3D v 1.5)
		-this change affects GenericEdgePortrayal3D and its subclasses!
	GenericEdgePortrayal3D: minor housekeeping item, unused object commented out.
	Reindented	
	Moved ValueGridCellInfo into the quad package
	Added READMEs
	Made various edgePortrayal3Ds thinner by default: Cone, Cylinder and Arrow.
	Arrow: arrow head is wider, and, for short arrows it's also shorter.

Version 15
	Added some more READMES
	Added precision option (finally) to writing PDFs out.  Will probably break things!
	Made FastValuePortrayal2D precise when writing PDFs
	Heavily revised foraging ants example (antsforage).  The new version jettisons
		our old experimental version and replaces it with a version similar to the
		ones in our papers.  It's much simpler, smaller, far more elegant, and
		works better too.  Also elimiantes the stupid toroidal bug.
	Added a filtering function to SimpleColorMap.  This makes it a little slower but
		we think it's worth it.  See the new AntsForageWithUI.java file for an
		example of how to use it.
	Bug fix in SimpleEdgePortrayal2D: setScaling and getScaling were setting the wrong
		values.
	EdgeDrawInfo2D now has a few more constructors
	FieldPortrayal2D.getLocation() has been renamed to FieldPortrayal2D.getClipLocation()
		to avoid confusion.
	We've added and renamed a lot of methods in FieldPortrayal2D, resulting in the methods
		getObjectLocation, getLocationPosition, getObjectPosition, and a new method
		called getRelativeObjectPosition.  This makes the 2D portrayal nonsense a
		little more consistent and adds some functionality to make it easier to 
	Bug fix in Console: if you automatically pause after a certain time, then the Console
		wants to continue pausing, which can be irritating.
	Added size() method to SparseField