@@ -29,7 +29,9 @@ public class HeatBugsWithUI extends GUIState
 // uncomment this to try out trails  (also need to uncomment out some others in this file, look around)
 // you'll also need to cause a Bug to wander a lot more in order to see the trail -- I suggest setting
 // its idealTemperature to 0 in the Inspector.
+/*
      SparseGridPortrayal2D trailsPortrayal = new SparseGridPortrayal2D(); 
+*/
 
     public static void main(String[] args)
         {
@@ -68,15 +70,16 @@ public class HeatBugsWithUI extends GUIState
     public void setupPortrayals()
         {
         // tell the portrayals what to portray and how to portray them
-        heatPortrayal.setMap(new sim.util.gui.SimpleColorMap(0,HeatBugs.MAX_HEAT,Color.black,Color.red));
-        bugPortrayal.setPortrayalForAll( new sim.portrayal.simple.OvalPortrayal2D(Color.white) );   // all the heatbugs will be white ovals
-		
-        heatPortrayal.setField(((HeatBugs)state).valgrid);
         bugPortrayal.setField(((HeatBugs)state).buggrid);
-		
+        bugPortrayal.setPortrayalForAll( new sim.portrayal.simple.OvalPortrayal2D(Color.white) );   // all the heatbugs will be white ovals
+
+        heatPortrayal.setField(((HeatBugs)state).valgrid);
+        heatPortrayal.setMap(new sim.util.gui.SimpleColorMap(0,HeatBugs.MAX_HEAT,Color.black,Color.red));
+				
 // uncomment this to try out trails  (also need to uncomment out some others in this file, look around)
 // you'll also need to cause a Bug to wander a lot more in order to see the trail -- I suggest setting
 // its idealTemperature to 0 in the Inspector.
+/*
         trailsPortrayal.setField(((HeatBugs)state).buggrid);
 		SimplePortrayal2D heatBugPortrayal = new sim.portrayal.simple.OvalPortrayal2D(Color.white);
 		for(int x=0;x<((HeatBugs)state).bugs.length;x++)
@@ -84,6 +87,7 @@ public class HeatBugsWithUI extends GUIState
             trailsPortrayal.setPortrayalForObject(((HeatBugs)state).bugs[x], 
 				new TrailedPortrayal2D(this, heatBugPortrayal, trailsPortrayal, 10));
 			}
+*/
 
         // reschedule the displayer
         display.reset();
@@ -111,7 +115,9 @@ public class HeatBugsWithUI extends GUIState
 // uncomment this to try out trails  (also need to uncomment out some others in this file, look around)
 // you'll also need to cause a Bug to wander a lot more in order to see the trail -- I suggest setting
 // its idealTemperature to 0 in the Inspector.
+/*
         display.attach( trailsPortrayal, "Trails" ); 
+*/
 
         display.attach(bugPortrayal,"Bugs");
 
